--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
             <div class="bg-light row" id="calculatorHeader"> Im the header </div>
             <div class="bg-warning" id="calculatorButtons">
                   <div class="row bg-light" id="row1">
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
-                        <div class="col bg-light">
+                        <div class="col button bg-light">
                               1 of 3
                         </div>
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
                   </div>
                   <div class="row bg-light" id="row2">
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
-                        <div class="col bg-light">
+                        <div class="col button bg-light">
                               1 of 3
                         </div>
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
                   </div>
                   <div class="row bg-light" id="row3">
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
-                        <div class="col bg-light">
+                        <div class="col button bg-light">
                               1 of 3
                         </div>
-                        <div class="col bg-info">
+                        <div class="col button bg-info">
                               1 of 3
                         </div>
                   </div>
