css finished. could be cleaned up though

--- a/index.html
+++ b/index.html
@@ -10,39 +10,58 @@
 </head>
 <body class="bg-danger">
       <div class="container-fluid bg-success" id="masterDiv">
-            <div class="bg-light row" id="calculatorHeader"> Im the header </div>
+            <div class="bg-light row" id="calculatorHeader">
+                  <div class="col button bg-info">
+                        Im the header 
+                  </div>
+                  <div class="col button bg-light">
+                        *
+                  </div>
+                  <div class="col button bg-info">
+                        =
+                  </div>
+            </div>
             <div class="bg-warning" id="calculatorButtons">
                   <div class="row bg-light" id="row1">
                         <div class="col button bg-info">
-                              1 of 3
+                              1 
                         </div>
                         <div class="col button bg-light">
-                              1 of 3
+                              2
                         </div>
                         <div class="col button bg-info">
-                              1 of 3
+                              3 
+                        </div>
+                        <div class="col button bg-info">
+                              4
                         </div>
                   </div>
                   <div class="row bg-light" id="row2">
                         <div class="col button bg-info">
-                              1 of 3
+                              5 
                         </div>
                         <div class="col button bg-light">
-                              1 of 3
+                              6 
                         </div>
                         <div class="col button bg-info">
-                              1 of 3
+                              7 
+                        </div>
+                        <div class="col button bg-info">
+                              8 
                         </div>
                   </div>
                   <div class="row bg-light" id="row3">
                         <div class="col button bg-info">
-                              1 of 3
+                              9 
                         </div>
                         <div class="col button bg-light">
-                              1 of 3
+                              0 
                         </div>
                         <div class="col button bg-info">
-                              1 of 3
+                              + 
+                        </div>
+                        <div class="col button bg-info">
+                              - 
                         </div>
                   </div>
             </div>
