--- a/index.html
+++ b/index.html
@@ -1,71 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-      <link href="./style.css" rel="stylesheet">
-      <title>Document</title>
-</head>
-<body class="bg-danger">
-      <div class="container-fluid bg-success" id="masterDiv">
-            <div class="bg-light row" id="calculatorHeader">
-                  <div class="col button bg-info"> 
-                  </div>
-                  <div class="col button bg-light">
-                        *
-                  </div>
-                  <div class="col button bg-info">
-                        =
-                  </div>
-            </div>
-            <div class="bg-warning" id="calculatorButtons">
-                  <div class="row bg-light" id="row1">
-                        <div class="col button bg-info">
-                              1 
-                        </div>
-                        <div class="col button bg-light">
-                              2
-                        </div>
-                        <div class="col button bg-info">
-                              3 
-                        </div>
-                        <div class="col button bg-info">
-                              4
-                        </div>
-                  </div>
-                  <div class="row bg-light" id="row2">
-                        <div class="col button bg-info">
-                              5 
-                        </div>
-                        <div class="col button bg-light">
-                              6 
-                        </div>
-                        <div class="col button bg-info">
-                              7 
-                        </div>
-                        <div class="col button bg-info">
-                              +
-                        </div>
-                  </div>
-                  <div class="row bg-light" id="row3">
-                        <div class="col button bg-info">
-                              9 
-                        </div>
-                        <div class="col button bg-light">
-                              0 
-                        </div>
-                        <div class="col button bg-info">
-                              8
-                        </div>
-                        <div class="col button bg-info">
-                              - 
-                        </div>
-                  </div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link href="./style.css" rel="stylesheet" />
+    <title>Document</title>
+  </head>
+  <body class="bg-danger">
+    <div class="container-fluid bg-success" id="masterDiv">
+      <div class="bg-light row" id="calculatorHeader">
+        <div class="col button bg-info"></div>
+        <div class="col button bg-light">*</div>
+        <div class="col button bg-info">=</div>
       </div>
-</body>
 
-<script src="./dom.js"></script>
+      <div class="row bg-light" id="row1">
+        <div class="col button bg-info">1</div>
+        <div class="col button bg-light">2</div>
+        <div class="col button bg-info">3</div>
+        <div class="col button bg-info">4</div>
+      </div>
+      <div class="row bg-light" id="row2">
+        <div class="col button bg-info">5</div>
+        <div class="col button bg-light">6</div>
+        <div class="col button bg-info">7</div>
+        <div class="col button bg-info">+</div>
+      </div>
+      <div class="row bg-light" id="row3">
+        <div class="col button bg-info">9</div>
+        <div class="col button bg-light">0</div>
+        <div class="col button bg-info">8</div>
+        <div class="col button bg-info">-</div>
+      </div>
+    </div>
+  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="./dom.js"></script>
 </html>
