--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="./style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body class="bg-danger">
+  <body class="bg-dark">
     <div class="container-fluid bg-success" id="masterDiv">
       <div class="bg-light row" id="calculatorHeader">
         <div class="col button bg-info" id="answer_element"></div>
