--- a/index.html
+++ b/index.html
@@ -17,28 +17,32 @@
     <div class="container-fluid bg-success" id="masterDiv">
       <div class="bg-light row" id="calculatorHeader">
         <div class="col button bg-info" id="answer_element"></div>
-        <div class="col button bg-light">clear</div>
-        <div class="col button bg-info">*</div>
-        <div class="col button bg-light">=</div>
+        <div class="col-3 button bg-light">clear</div>
       </div>
 
       <div class="row bg-light" id="row1">
         <div class="col button bg-info">1</div>
         <div class="col button bg-light">2</div>
         <div class="col button bg-info">3</div>
-        <div class="col button bg-light">4</div>
+        <div class="col button bg-light">*</div>
       </div>
       <div class="row bg-light" id="row2">
-        <div class="col button bg-info">5</div>
-        <div class="col button bg-light">6</div>
-        <div class="col button bg-info">7</div>
+        <div class="col button bg-info">4</div>
+        <div class="col button bg-light">5</div>
+        <div class="col button bg-info">6</div>
         <div class="col button bg-light">+</div>
       </div>
       <div class="row bg-light" id="row3">
+        <div class="col button bg-info">7</div>
+        <div class="col button bg-light">8</div>
         <div class="col button bg-info">9</div>
-        <div class="col button bg-light">0</div>
-        <div class="col button bg-info">8</div>
         <div class="col button bg-light">-</div>
+      </div>
+      <div class="row bg-light" id="row4">
+        <div class="col button bg-info"></div>
+        <div class="col button bg-light">0</div>
+        <div class="col button bg-info"></div>
+        <div class="col button bg-light">=</div>
       </div>
     </div>
   </body>
